# ws_cnr_ros

./: README.md
ws_cnr_ros/src/cnr_motion_control-master/cnr_follow_joint_trajectory_controller/: CMakeLists.txt  package.xml  plugins.xml
ws_cnr_ros/src/cnr_motion_control-master/cnr_follow_joint_trajectory_controller/include/cnr_follow_joint_trajectory_controller/: cnr_follow_joint_trajectory_controller.h  cnr_follow_joint_trajectory_pos_controller.h  cnr_follow_joint_trajectory_posveleff_controller.h
ws_cnr_ros/src/cnr_motion_control-master/cnr_follow_joint_trajectory_controller/src/cnr_follow_joint_trajectory_controller/: cnr_follow_joint_trajectory_pos_controller.cpp  cnr_follow_joint_trajectory_posveleff_controller.cpp
ws_cnr_ros/src/cnr_motion_control-master/cnr_interpolator_interface/: CMakeLists.txt  package.xml
ws_cnr_ros/src/cnr_motion_control-master/cnr_interpolator_interface/include/cnr_interpolator_interface/: cnr_interpolator_inputs.h  cnr_interpolator_interface.h  cnr_interpolator_outputs.h  cnr_interpolator_point.h  cnr_interpolator_state.h  cnr_interpolator_trajectory.h
ws_cnr_ros/src/cnr_motion_control-master/cnr_interpolator_interface/test/: test.cpp  test.launch
ws_cnr_ros/src/cnr_motion_control-master/lookahead_prefilter/: CMakeLists.txt  package.xml  plugin.xml
ws_cnr_ros/src/cnr_motion_control-master/lookahead_prefilter/include/lookahead_prefilter/: cartesian_lookahead_prefilter.h
ws_cnr_ros/src/cnr_motion_control-master/lookahead_prefilter/src/lookahead_prefilter/: cartesian_lookahead_prefilter.cpp
ws_cnr_ros/src/cnr_motion_control-master/lookahead_prefilter/test/: test.launch
ws_cnr_ros/src/cnr_motion_control-master/thor_prefilter/: CMakeLists.txt  package.xml  plugin.xml
ws_cnr_ros/src/cnr_motion_control-master/thor_prefilter/src/: test_prefilter.cpp
ws_cnr_ros/src/cnr_ros_regulators-master/cnr_fake_regulator/: CMakeLists.txt  package.xml  plugin.xml
ws_cnr_ros/src/cnr_ros_regulators-master/cnr_fake_regulator/test/: test.cpp
ws_cnr_ros/src/cnr_ros_regulators-master/cnr_impedance_regulator/: CMakeLists.txt  package.xml  plugin.xml
ws_cnr_ros/src/cnr_ros_regulators-master/cnr_regulator_interface/: CMakeLists.txt  package.xml
ws_cnr_ros/src/cnr_ros_regulators-master/cnr_regulator_interface/test/: test.cpp  test.launch
ws_cnr_ros/src/eigen_utils-master/eigen_matrix_utils/: CMakeLists.txt  package.xml
ws_cnr_ros/src/name_sorting-master/: CMakeLists.txt  README.mkd  package.xml
ws_cnr_ros/src/name_sorting-master/include/name_sorting/: name_sorting.h  sort_trajectories.h
ws_cnr_ros/src/name_sorting-master/src/name_sorting/: name_sorting.cpp  sort_trajectories.cpp
ws_cnr_ros/src/object_loader-master/object_loader/: CMakeLists.txt  package.xml
ws_cnr_ros/src/object_loader-master/object_loader/config/: objects.yaml  static_scene.yaml
ws_cnr_ros/src/object_loader-master/object_loader/launch/: planning_manager.launch  scene_spawner.launch
ws_cnr_ros/src/object_loader-master/object_loader/scripts/: object_groups_loader.py
ws_cnr_ros/src/object_loader-master/object_loader/src/: context_manager_node.cpp  manage_planning_scene.cpp  scene_objects_manager.cpp  scene_spawner.cpp
ws_cnr_ros/src/object_loader-master/object_loader_msgs/: CMakeLists.txt  package.xml
ws_cnr_ros/src/object_loader-master/object_loader_msgs/msg/: Object.msg
ws_cnr_ros/src/object_loader-master/object_loader_msgs/srv/: AddObjects.srv  AddObjectsGroup.srv  AttachObject.srv  ChangeColor.srv  IsAttached.srv  ListObjects.srv  RemoveObjects.srv  RemoveObjectsGroup.srv
ws_cnr_ros/src/realtime_utilities-master/: .gitignore  CMakeLists.txt  README.md  package.xml
ws_cnr_ros/src/realtime_utilities-master/include/realtime_utilities/: circular_buffer.h  circular_buffer_stamped.h  diagnostics_interface.h  parallel_computing.h  realtime_ipc.h  realtime_utilities.h  shared_mutex.h  time_span_tracker.h  vector_mt.h
ws_cnr_ros/src/realtime_utilities-master/src/realtime_utilities/: diagnostics_interface.cpp  realtime_utilities.cpp  shared_mutex.cpp
ws_cnr_ros/src/realtime_utilities-master/test/: tasks.cpp
ws_cnr_ros/src/relative_cartesian_controllers-master/relative_cartesian_controller_msgs/: CMakeLists.txt  package.xml
ws_cnr_ros/src/relative_cartesian_controllers-master/relative_cartesian_controller_msgs/action/: RelativeMove.action
ws_cnr_ros/src/robot_control_algorithms-master/: CMakeLists.txt  README.md  package.xml
ws_cnr_ros/src/robot_control_algorithms-master/include/robust_inverse_dynamics/: robust_inverse_dynamics.h
ws_cnr_ros/src/robot_control_algorithms-master/src/robust_inverse_dynamics/: robust_inverse_dynamics.cpp
ws_cnr_ros/src/rosdyn_utilities-master/rosdyn_chain_state/: CMakeLists.txt  package.xml
ws_cnr_ros/src/rosdyn_utilities-master/rosdyn_chain_state/src/: chain_state.cpp  rosdyn_utilities_node_test.cpp
ws_cnr_ros/src/rosdyn_utilities-master/rosdyn_chain_state/test/: test.cpp  test.launch
ws_cnr_ros/src/scaled_follow_joint_trajectory_controller-master/: CMakeLists.txt  README.md  package.xml  plugins.xml
ws_cnr_ros/src/scaled_follow_joint_trajectory_controller-master/include/scaled_fjt_controller/: scaled_fjt_controller.h  scaled_fjt_pos_controller.h  scaled_fjt_posveleff_controller.h
ws_cnr_ros/src/scaled_follow_joint_trajectory_controller-master/src/scaled_fjt_controller/: microinterpolator.cpp  scaled_fjt_pos_controller.cpp  scaled_fjt_posveleff_controller.cpp
ws_cnr_ros/src/standard_ros_control_library-master/mimic_controller/: CMakeLists.txt  README.md  package.xml  plugin.xml
ws_cnr_ros/src/standard_ros_control_library-master/robust_inverse_dynamics_controller/: CMakeLists.txt  README.md  package.xml  plugin.xml
ws_cnr_ros/src/subscription_notifier-master/: .gitignore  CMakeLists.txt  README.md  package.xml
ws_cnr_ros/src/subscription_notifier-master/include/subscription_notifier/: subscription_notifier.h
ws_cnr_ros/src/subscription_notifier-master/src/: subscription_notifier_node.cpp
ws_cnr_ros/src/subscription_notifier-master/src/subscription_notifier/: subscription_notifier.cpp
(+232 files in other folders)
