<?xml version="1.0"?>
<package format="2">
  <name>name_sorting</name>
  <version>0.0.0</version>
  <description>The name_sorting package</description>

  <maintainer email="maxwell@todo.todo">maxwell</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
