<?xml version="1.0"?>
<package format="2">
  <name>scaled_fjt_controller</name>
  <version>0.0.0</version>
  <description>The scaled_fjt_controller package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cnr_controller_interface</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>cnr_controller_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>name_sorting</depend>
  <depend>controller_interface</depend>
  <depend>rosdyn_chain_state</depend>
  <depend>trajectory_msgs</depend>
  <depend>rosdyn_core</depend>
  <depend>cnr_logger</depend>



  <export>
        <controller_interface plugin="${prefix}/plugins.xml"/>
  </export>
</package>
