<?xml version="1.0"?>
<package format="2">
  <name>lookahead_prefilter</name>
  <version>0.0.0</version>
  <description>The lookahead_prefilter package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tesla@todo.todo">tesla</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/lookahead_prefilter</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cnr_regulator_interface</build_depend>
  <build_depend>cnr_interpolator_interface</build_depend>
  <build_depend>cnr_logger</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_export_depend>cnr_regulator_interface</build_export_depend>
  <build_export_depend>cnr_interpolator_interface</build_export_depend>
  <build_export_depend>cnr_logger</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <exec_depend>cnr_interpolator_interface</exec_depend>
  <exec_depend>cnr_regulator_interface</exec_depend>
  <exec_depend>cnr_logger</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cnr_interpolator_interface plugin="${prefix}/plugin.xml"/> 

  </export>
</package>
