<?xml version="1.0"?>
<package format="2">
  <name>cnr_regulator_interface</name>
  <version>0.0.0</version>
  <description>The cnr_regulator_interface package</description>

  <maintainer email="tesla@todo.todo">tesla</maintainer>

  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/cnr_regulator_interface</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <depend>cnr_logger</depend>
  <depend>realtime_utilities</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>cnr_interpolator_interface</depend>
  <depend>rosdyn_chain_state</depend>

  <export>
  </export>
</package>
