<?xml version="1.0"?>
<package format="2">
  <name>object_loader</name>
  <version>0.0.1</version>
  <description>The object_loader package</description>

  <maintainer email="paolo.franceschi@stiima.cnr.it">paolofranceschi</maintainer>

  <license>BSD</license>

  <author email="paolo.franceschi@stiima.cnr.it">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>        roscpp </build_depend>  
  <build_export_depend> roscpp  </build_export_depend>
  <exec_depend>         roscpp  </exec_depend>

  <build_depend>        geometry_msgs </build_depend>
  <build_export_depend> geometry_msgs </build_export_depend>
  <exec_depend>         geometry_msgs </exec_depend>

  <build_depend>        std_srvs  </build_depend>
  <build_export_depend> std_srvs  </build_export_depend>
  <exec_depend>         std_srvs  </exec_depend>

  <build_depend>        rosparam_utilities  </build_depend>
  <build_export_depend> rosparam_utilities  </build_export_depend>
  <exec_depend>         rosparam_utilities  </exec_depend>
  
  <build_depend>        moveit_core  </build_depend>
  <build_export_depend> moveit_core  </build_export_depend>
  <exec_depend>         moveit_core  </exec_depend>
  
  <build_depend>        moveit_ros_planning_interface  </build_depend>
  <build_export_depend> moveit_ros_planning_interface  </build_export_depend>
  <exec_depend>         moveit_ros_planning_interface  </exec_depend>
  
  <build_depend>        moveit_msgs  </build_depend>
  <build_export_depend> moveit_msgs  </build_export_depend>
  <exec_depend>         moveit_msgs  </exec_depend>
  
  <build_depend>        object_loader_msgs  </build_depend>
  <build_export_depend> object_loader_msgs  </build_export_depend>
  <exec_depend>         object_loader_msgs  </exec_depend>

  <build_depend>        eigen_conversions  </build_depend>
  <build_export_depend> eigen_conversions  </build_export_depend>
  <exec_depend>         eigen_conversions  </exec_depend>

<build_depend>        tf_conversions  </build_depend>
<build_export_depend> tf_conversions  </build_export_depend>
<exec_depend>         tf_conversions  </exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
