<?xml version="1.0"?>
<package format="2">
  <name>object_loader_msgs</name>
  <version>0.0.1</version>
  <description>The object_loader package</description>

  <maintainer email="paolo.franceschi@stiima.cnr.it">paolofranceschi</maintainer>

  <license>BSD</license>

  <author email="paolo.franceschi@stiima.cnr.it">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>rosparam_utilities</build_depend>
  <build_export_depend>rosparam_utilities</build_export_depend>
  <exec_depend>rosparam_utilities</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
